docs: update backend
